# RasterizerProject

./: CMakeLists.txt
include/: Bitmap.h  Model.h  Renderer.h  Utils.h  Vec2.h  Vec3.h
src/: Bitmap.cpp  Model.cpp  Renderer.cpp  main.cpp
